--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     />
     <title>Geography Quiz</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
     <!-- start Quiz button -->
