--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       content="An online quiz game to test your knowledge of the Geography"
     />
     <title>Geography Quiz</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
   </head>
-  <body>
 
+  <body>
     <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
 
@@ -115,9 +115,10 @@
     </footer>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="script/questions.js"></script>
+    <script src="assets/script/app.js"></script>
 
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
-    <script src="script/app.js"></script>
+    <script src="assets/script/questions.js"></script>
   </body>
 </html>
+
