--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       </div>
       <div class="buttons">
         <button class="restart">Replay Quiz</button>
+        <!--here you replay or quit-->
         <button class="quit">Quit Quiz</button>
       </div>
     </div>
