--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!-- Here I've inserted Queation count number from JavaScript -->
         </div>
         <button class="next_btn">Next Que</button>
-      </footer>
+       </footer>
     </div>
     <!-- Result Box -->
     <div class="result_box">
@@ -86,34 +86,33 @@
       </div>
     </div>
 
-    <footer>
-      <ul class="social-networks">
-        <li>
-          <a
-            href="https://github.com/JoannaAdermark1"
-            id="github"
-            target="_blank"
-            rel="noopener"
-            aria-label="Go to my GitHub repository!(Link opens in a new tab)"
-            ><i class="fab fa-github"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/joanna-adermark-b06066aa"
-            id="linkedin"
-            target="_blank"
-            rel="noopener"
-            aria-label="Go to my LinkedIn!(Link opens in a new tab)"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </li>
-      </ul>
-
-      <div class="copyright-wrapper">
-        <p><span class="copyright">&copy;</span>2023 Geographical Quiz</p>
-      </div>
-    </footer>
+        <!-- Footer -->
+        <footer>
+          <ul class="social-networks">
+            <li>
+              <a
+                href="https://github.com/JoannaAdermark1"
+                id="github"
+                target="_blank"
+                rel="noopener"
+                aria-label="Go to my GitHub repository!(Link opens in a new tab)"
+                ><i class="fab fa-github"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/joanna-adermark-b06066aa"
+                id="linkedin"
+                target="_blank"
+                rel="noopener"
+                aria-label="Go to my LinkedIn!(Link opens in a new tab)"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </li>
+          </ul>
+            <p><span class="copyright">&copy;</span>2023 Geographical Quiz</p>
+          </div>
+        </footer>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
     <script src="assets/script/app.js"></script>
