style footer and deleted img

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Metadata for character encoding and viewport -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="An online quiz game to test your knowledge of the Geography"
     />
+    <!-- Title of the web page displayed in the browser -->
     <title>Geography Quiz</title>
+    <!-- Link to an external CSS stylesheet for styling -->
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
@@ -68,7 +71,7 @@
           <!-- Here I've inserted Queation count number from JavaScript -->
         </div>
         <button class="next_btn">Next Que</button>
-       </footer>
+      </footer>
     </div>
     <!-- Result Box -->
     <div class="result_box">
@@ -87,7 +90,7 @@
     </div>
 
         <!-- Footer -->
-        <footer>
+        <footer class="main-footer">
           <ul class="social-networks">
             <li>
               <a
