--- a/index.html
+++ b/index.html
@@ -1,127 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Metadata for character encoding and viewport -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="An online quiz game to test your knowledge of the Geography"
-    />
-    <!-- Title of the web page displayed in the browser -->
-    <title>Geography Quiz</title>
-    <!-- Link to an external CSS stylesheet for styling -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-  </head>
+   <head>
+     <!-- Metadata for character encoding and viewport -->
+     <meta charset="UTF-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta
+       name="description"
+       content="An online quiz game to test your knowledge of Geography"/>
 
-  <body>
-    <!-- start Quiz button -->
-    <div class="start_btn"><button>Start Quiz</button></div>
-
-    <!-- Info Box -->
-    <div class="info_box">
-      <div class="info-title"><span>Some Rules of this Quiz</span></div>
-      <div class="info-list">
-        <div class="info">
-          1. You will have only <span>10 seconds</span> per each question.
-        </div>
-        <div class="info">
-          2. Once you select your answer, it can't be undone.
-        </div>
-        <div class="info">
-          3. You can't select any option once time goes off.
-        </div>
-        <div class="info">
-          4. You can't exit from the Quiz while you're playing.
-        </div>
-        <div class="info">
-          5. You'll get points on the basis of your correct answers.
-        </div>
-      </div>
-      <div class="buttons">
-        <button class="quit">Exit Quiz</button>
-        <button class="restart">Continue</button>
-      </div>
+       <!-- Title of the web page displayed in the browser -->
+     <title>The Geography Quiz</title>
+     <!-- Link to an external CSS stylesheet for styling -->
+     <link rel="stylesheet" href="assets/css/styles.css" />
+     <link
+       rel="stylesheet"
+       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+     />
+   </head>
+ 
+   <body>
+     <div class="heading">
+         <h1>The Geography Quiz</h1>
+     </div>
+     <!-- start Quiz button -->
+     <div class="start_btn"><button>Start Quiz</button></div>
+ 
+     <!-- Info Box -->
+     <div class="info_box">
+       <div class="info-title"><span>Some Rules of this Quiz</span></div>
+       <div class="info-list">
+         <div class="info">
+           1. You will have only! <span>10 seconds</span> per each question.
+         </div>
+         <div class="info">
+           2. Once you select your answer, it can't be undone.
+         </div>
+         <div class="info">
+           3. You can't select any option once time goes off.
+         </div>
+         <div class="info">
+           4. You can't exit from the Quiz while you're playing.
+         </div>
+         <div class="info">
+           5. You'll get points on the basis of your correct answers.
+         </div>
+       </div>
+       <div class="buttons">
+         <button class="quit">Exit Quiz</button>
+         <button class="restart">Continue</button>
+       </div>
+     </div>
+ 
+     <!-- Quiz Box -->
+     <div class="quiz_box">
+       <header>
+         <div class="title">The Geography Quiz</div>
+         <div class="timer">
+             <!-- here time countdown -->
+           <div class="time_left_txt">Time Left</div>
+           <div class="timer_sec">10</div>
+         </div>
+         <div class="time_line"></div>
+       </header>
+       <section>
+         <div class="que_text">
+           <!-- Here I've inserted question from JavaScript -->
+         </div>
+         <div class="option_list">
+           <!-- Here I've inserted options from JavaScript -->
+         </div>
+       </section>
+       <footer>
+         <div class="total_que">
+           <!-- Here I've inserted Queation count number from JavaScript -->
+         </div>
+         <button class="next_btn">Next Que</button>
+       </footer>
+     </div>
+     <!-- Result Box -->
+     <div class="result_box">
+       <div class="icon">
+         <i class="fas fa-crown"></i>
+       </div>
+       <div class="complete_text">You've completed the Quiz!</div>
+       <div class="score_text">
+         <!--here you replay or quit-->
+         <!-- Here I've inserted Score Result from JavaScript -->
+       </div>
+       <div class="buttons">
+         <button class="restart">Replay Quiz</button>
+         <button class="quit">Quit Quiz</button>
+       </div>
+     </div>
+    <!-- Footer -->
+    <footer class="main-footer">  
+      <ul class="social-networks">
+     <li>
+       <a
+         href="https://github.com/JoannaAdermark1"
+         id="github"
+         target="_blank"
+         rel="noopener"
+         aria-label="Go to my GitHub repository!(Link opens in a new tab)"
+         ><i class="fab fa-github"></i
+       ></a>
+     </li>
+     <li>
+       <a
+         href="https://www.linkedin.com/in/joanna-adermark-b06066aa"
+         id="linkedin"
+         target="_blank"
+         rel="noopener"
+         aria-label="Go to my LinkedIn!(Link opens in a new tab)"
+         ><i class="fab fa-linkedin"></i
+       ></a>
+     </li>
+     </ul>
+     <p><span class="copyright">&copy;</span>2024 Geographical Quiz</p>
     </div>
+   </footer>
 
-    <!-- Quiz Box -->
-    <div class="quiz_box">
-      <header>
-        <div class="title">Geography Quiz</div>
-        <div class="timer">
-          <div class="time_left_txt">Time Left</div>
-          <div class="timer_sec">10</div>
-        </div>
-        <div class="time_line"></div>
-      </header>
-      <section>
-        <div class="que_text">
-          <!-- Here I've inserted question from JavaScript -->
-        </div>
-        <div class="option_list">
-          <!-- Here I've inserted options from JavaScript -->
-        </div>
-      </section>
-      <footer>
-        <div class="total_que">
-          <!-- Here I've inserted Queation count number from JavaScript -->
-        </div>
-        <button class="next_btn">Next Que</button>
-      </footer>
-    </div>
-    <!-- Result Box -->
-    <div class="result_box">
-      <div class="icon">
-        <i class="fas fa-crown"></i>
-      </div>
-      <div class="complete_text">You've completed the Quiz!</div>
-      <div class="score_text">
-        <!-- Here I've inserted Score Result from JavaScript -->
-      </div>
-      <div class="buttons">
-        <button class="restart">Replay Quiz</button>
-        <!--here you replay or quit-->
-        <button class="quit">Quit Quiz</button>
-      </div>
-    </div>
+   <!-- Inside this JavaScript file I've inserted Questions and Options only -->
+   <script src="assets/script/main.js"></script>
 
-        <!-- Footer -->
-        <footer class="main-footer">
-          <ul class="social-networks">
-            <li>
-              <a
-                href="https://github.com/JoannaAdermark1"
-                id="github"
-                target="_blank"
-                rel="noopener"
-                aria-label="Go to my GitHub repository!(Link opens in a new tab)"
-                ><i class="fab fa-github"></i
-              ></a>
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/joanna-adermark-b06066aa"
-                id="linkedin"
-                target="_blank"
-                rel="noopener"
-                aria-label="Go to my LinkedIn!(Link opens in a new tab)"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-            </li>
-          </ul>
-            <p><span class="copyright">&copy;</span>2024 Geographical Quiz</p>
-          </div>
-        </footer>
-
-    <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="assets/script/app.js"></script>
-
-    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
-    <script src="assets/script/questions.js"></script>
-  </body>
+   <!-- Inside this JavaScript file I've coded all Quiz Codes -->
+   <script src="assets/script/quiz.js"></script>
+ </body>
 </html>
-
