--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        content="An online quiz game to test your knowledge of Geography"/>
 
        <!-- Title of the web page displayed in the browser -->
-     <title>The Geography Quiz</title>
+     <title>world Geography Quiz</title>
      <!-- Link to an external CSS stylesheet for styling -->
      <link rel="stylesheet" href="assets/css/styles.css" />
      <link
@@ -20,7 +20,7 @@
  
    <body>
      <div class="heading">
-         <h1>The Geography Quiz</h1>
+         <h1>World Quiz:  Learn Geography</h1>
      </div>
      <!-- start Quiz button -->
      <div class="start_btn"><button>Start Quiz</button></div>
