docs: updated footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        content="An online quiz game to test your knowledge of Geography"/>
 
        <!-- Title of the web page displayed in the browser -->
-     <title>world Geography Quiz</title>
+     <title>  World Quiz: Learn Geography</title>
      <!-- Link to an external CSS stylesheet for styling -->
      <link rel="stylesheet" href="assets/css/styles.css" />
      <link
@@ -20,7 +20,7 @@
  
    <body>
      <div class="heading">
-         <h1>World Quiz:  Learn Geography</h1>
+         <h1>World Quiz: Learn Geography</h1>
      </div>
      <!-- start Quiz button -->
      <div class="start_btn"><button>Start Quiz</button></div>
@@ -54,7 +54,7 @@
      <!-- Quiz Box -->
      <div class="quiz_box">
        <header>
-         <div class="title">The Geography Quiz</div>
+         <div class="title">Learn Geography</div>
          <div class="timer">
              <!-- here time countdown -->
            <div class="time_left_txt">Time Left</div>
@@ -116,7 +116,7 @@
        ></a>
      </li>
      </ul>
-     <p><span class="copyright">&copy;</span>2024 Geographical Quiz</p>
+     <p><span class="copyright">&copy;</span>2024 Learn Geography</p>
     </div>
    </footer>
 
