styles: change px to rem

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
          <div class="total_que">
            <!-- Here I've inserted Queation count number from JavaScript -->
          </div>
-         <button class="next_btn">Next Que</button>
+         <button class="next_btn">Next</button>
        </footer>
      </div>
      <!-- Result Box -->
